--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>WAT</title>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   </head>
   <body>
-    <h1>Ara</h1>
+    <h1 class="name">Ara</h1>
     <img src="./images/catimage.jpg" alt="cat">
     <p>hi</p>
     <header>hi</header>
